--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-PAH_BACKEND=http://127.0.0.1/api
+NEXT_PUBLIC_PAH_BACKEND=http://127.0.0.1/api
 APCIS_URL=http://167.172.74.157/api
 NODE_ENV=development
 NEXT_PRIVATE_DEBUG_CACHE=1
