--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^3.1.1",
+    "@tanstack/react-query": "^5.56.2",
     "@types/fullcalendar": "^3.8.0",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
