--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.3.31",
     "geist": "^1.3.0",
     "lucide-react": "^0.377.0",
