--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
