--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-easy-middlewares": "^1.2.0",
     "next-safe-action": "^7.6.4",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
