--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
+    "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
